fixing z-index issue

--- a/src/components/landing/landing.css
+++ b/src/components/landing/landing.css
@@ -139,6 +139,11 @@
     gap: 10px;
 }
 
+.h00 {
+    height: 0;
+    padding: 0;
+}
+
 .searchMainLink:hover {
     background-color: #f4f5f6;
 }
